testcases/malgo/error/ErrorInvalidIdent.mlg
module ErrorInvalidIdent = {
  def let = {x f -> f x}
}